update Calculation Api logic
