# java/src/main/java/tomNowa/trainIT/be/controller/CalculationController.java
@@ -1,6 +1,7 @@
 package tomNowa.trainIT.be.controller;
 
 import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.RestController;
 import tomNowa.trainIT.be.api.CalculationApi;
 import tomNowa.trainIT.be.model.dto.RunCalculationDto;
 import tomNowa.trainIT.be.model.dto.Timerange;
@@ -8,12 +9,23 @@ import tomNowa.trainIT.be.service.CalculationService;
 
 import java.time.LocalDate;
 
+@RestController
 public class CalculationController implements CalculationApi {
 
     private CalculationService service;
 
     public CalculationController(final CalculationService service) {
         this.service = service;
+    }
+
+    @Override
+    public ResponseEntity<RunCalculationDto> calculationOfIndividualTimerange(final Integer userId, final LocalDate fromDate, final LocalDate toDate) {
+        return CalculationApi.super.calculationOfIndividualTimerange(userId, fromDate, toDate);
+    }
+
+    @Override
+    public ResponseEntity<RunCalculationDto> calculationOfLastRuns(final Integer userId, final Integer lastRuns) {
+        return CalculationApi.super.calculationOfLastRuns(userId, lastRuns);
     }
 
     @Override
