# shared/api.yaml
@@ -48,7 +48,7 @@ paths:
         200:
           description: ok
 
-  /calculation/{userId}/{timerange}:
+  /calculation/timerange/{userId}/{timerange}:
     get:
       operationId: calculationOfTimerange
       parameters:
@@ -63,6 +63,36 @@ paths:
                   type: object
                   $ref: '#/components/schemas/RunCalculationDto'
 
+  /calculation/timerange/{userId}/{fromDate}/{toDate}:
+    get:
+      operationId: calculationOfIndividualTimerange
+      parameters:
+        - $ref: '#/components/parameters/userId'
+        - $ref: '#/components/parameters/fromDate'
+        - $ref: '#/components/parameters/toDate'
+      responses:
+        200:
+          description: ok
+          content:
+            application/json:
+              schema:
+                type: object
+                $ref: '#/components/schemas/RunCalculationDto'
+
+  /calculation/{userId}/{numberOfLastRuns}:
+    get:
+      operationId: calculationOfLastRuns
+      parameters:
+        - $ref: '#/components/parameters/userId'
+        - $ref: '#/components/parameters/numberOfLastRuns'
+      responses:
+        200:
+          description: ok
+          content:
+            application/json:
+              schema:
+                type: object
+                $ref: '#/components/schemas/RunCalculationDto'
 
 components:
   responses:
@@ -83,14 +113,30 @@ components:
         type:
         $ref: '#/components/schemas/Timerange'
 
-    startDate:
-      name: startDate
+    fromDate:
+      name: fromDate
       in: path
       required: true
       schema:
         type: date
         pattern: /([0-9]{4})-(?:[0-9]{2})-([0-9]{2})/
         example: "2019-05-17"
+
+    toDate:
+      name: toDate
+      in: path
+      required: true
+      schema:
+        type: date
+        pattern: /([0-9]{4})-(?:[0-9]{2})-([0-9]{2})/
+        example: "2019-05-17"
+
+    numberOfLastRuns:
+      name: lastRuns
+      in: path
+      required: true
+      schema:
+        type: integer
 
     userName:
       name: userName
@@ -153,9 +199,9 @@ components:
         seconds:
               type: integer
         date:
-            type: date
-            pattern: /([0-9]{4})-(?:[0-9]{2})-([0-9]{2})/
-            example: "2019-05-17"
+              type: date
+              pattern: /([0-9]{4})-(?:[0-9]{2})-([0-9]{2})/
+              example: "2019-05-17"
 
     RunCalculationDto:
       required:
